Fixed issue with overflow/scrollbar

--- a/styles/register_login.css
+++ b/styles/register_login.css
@@ -36,9 +36,13 @@ body{
 #header-log #main-page-link, #header-reg #main-page-link{
     margin-top: 10px;
 }
-#header-log h1, #header-reg h1{
+#header-log h1{
     font-size: 5em;
     text-shadow: 1px 1px red;
+}
+#header-reg h1{
+    font-size: 3em;
+    text-shadow: 1px 1px red;    
 }
 a{
     text-decoration: none;
@@ -58,12 +62,11 @@ a:hover{
     background-color: #61595B;
     box-shadow: 8px 5px black;
     border: 5px solid black;
-    padding: 10px;
+    padding: 20px;
 
-    width: 50vw;
-    height: 70vh;
+    width: 30vw;
+    height: 60vh;
 
-    overflow: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,6 +80,7 @@ a:hover{
     flex-direction: column;
     align-items:center;
     padding: 30px;
+    margin-top: 30px;
     border: 5px solid red;
 
 }
